# django-form-alpine

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  vitest.config.js
.github/workflows/: js-tests.yml  pre-commit.yml  pytest.yml  release.yml  tests.yml
docs/: conf.py  configuration.md  how-it-works.md  index.md  installation.md  quick-start.md  requirements.txt
docs/es/: conf.py  configuration.md  contributing.md  how-it-works.md  index.md  installation.md  quick-start.md
docs/es/features/: prefixed-directives.md  row-prefix.md  x-add-model-data.md
docs/es/resolvers/: admin-preset.md  custom.md
docs/features/: prefixed-directives.md  row-prefix.md  x-add-model-data.md
docs/resolvers/: admin-preset.md  custom.md
js_tests/: admin.test.js
src/django_admin_alpine/: __init__.py  apps.py  mixins.py
src/django_admin_alpine/forms/: __init__.py  mixins.py
src/django_admin_alpine/static/: admin.js
src/django_admin_alpine/static/django_admin_alpine/js/: admin.js
src/django_admin_alpine/static/js/: admin.js
src/django_form_alpine/: __init__.py  apps.py  mixins.py
src/django_form_alpine/static/django_form_alpine/js/: admin.js  core.js
tests/: admin.test.js  conftest.py  settings.py  test_mixins.py  test_playwright.py
tests/test_app/: admin.py  forms.py  models.py
