[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-admin-alpine"
version = "0.0.1"
description = "Alpine.js variables in Django Admin forms"
authors = [
    { name = "Rodolfo Valentín Becerra García", email = "rodolvbg@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "Django>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-playwright>=0.5.0",
    "playwright>=1.41.0",
    "pre-commit>=3.6.0",
    "ruff>=0.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E203"]
