[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-form-alpine"
version = "0.0.2"
description = "Alpine.js variables in Django Admin forms"
authors = [
    { name = "Rodolfo Valentín Becerra García", email = "rodolvbg@gmail.com" }
]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
    "Django>=3.2",
]

[project.urls]
#Homepage = "https://github.com/rodolvbg/django-form-alpine"
Repository = "https://github.com/rodolvbg/django-form-alpine"
Issues = "https://github.com/rodolvbg/django-form-alpine/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "pytest-playwright>=0.5.0",
    "playwright>=1.41.0",
    "pre-commit>=3.6.0",
    "ruff>=0.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E203"]
